Sept Update - 3.13 and final bits of Floating World

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -1,14 +1,14 @@
 ﻿l_simp_chinese:
  pd_domed_colony_0: "穹顶殖民地"
  pd_domed_colony_0_DESC: "这个星球拥有环境改造的可能。通过建立穹顶殖民地，我们可以建立一个立足点，作为逐渐改造星球环境的基地。"
- pd_domed_colony_0_MEGASTRUCTURE_DETAILS: "§Y穹顶殖民地§!是一系列自给自足的本地穹顶居住站，建立在拥有改造潜力的星球上。"
+ pd_domed_colony_0_MEGASTRUCTURE_DETAILS: "§Y穹顶殖民地§!是一系列自给自足的行星际穹顶居住站，建立在拥有改造潜力的星球上。"
  requires_terraforming_candidate: "$TRIGGER_FAIL$必须有环境改造候选修正。"
- requires_correct_planet_class: "$TRIGGER_FAIL$星球类型须能支持穹顶殖民地的建设。"
+ requires_correct_planet_class: "$TRIGGER_FAIL$星球类型必须得能支持穹顶殖民地的建设。"
  requires_pd_colony: "$TRIGGER_FAIL$星系内必须有至少一个非人工殖民地。"
- requires_pd_moon_base_site: "$TRIGGER_FAIL$必须有一项穹顶基址修正。"
- pd_domed_base_0: "穹顶基地"
- pd_domed_base_0_DESC: "这颗不宜居星球是建造穹顶基地的理想地点。它可以成为支持星系内临近殖民地的枢纽。"
- pd_domed_base_0_MEGASTRUCTURE_DETAILS: "§Y穹顶基地§!是一系列自给自足的本地穹顶居住站，建立在拥有战略价值的不宜居星球上。"
+ requires_pd_moon_base_site: "$TRIGGER_FAIL$必须有一项边沿基地修正。"
+ pd_domed_base_0: "边沿基地"
+ pd_domed_base_0_DESC: "这颗不宜居星球是建造边沿基地的理想地点。它可以成为支持星系内临近殖民地的枢纽。"
+ pd_domed_base_0_MEGASTRUCTURE_DETAILS: "§Y边沿基地§!是一种可自主维持基地，建立在拥有战略价值的不宜居星球上。它不足以成为完整的殖民地，但可以增进所在星系的经济水平。"
  TARGET_DOME_BASE_NAME: "[FROM.from.planet.GetName]基地"
  mod_job_trader_per_pop: "每$VALUE$人口§G+1§!£job_trader£ $job_trader$岗位"
  mod_job_trader_per_pop_short: "\n每$VALUE$ £pop£ §G+1§! £job_trader£"
@@ -17,79 +17,79 @@
  pc_pd_domed_colony_barren: "穹顶殖民地（荒芜星球）"
  pc_pd_domed_colony_barren_desc: "荒芜的岩石星球，几乎不存在大气层。表面布满了陨石坑，完全没有生命存在。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_barren_adj: "穹顶"
- mod_pc_pd_domed_colony_barren_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_barren_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_barren_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_barren_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_barren_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_barren_preference_desc: "Placehold/Should not see."
  pc_pd_domed_colony_barren_cold: "$pc_pd_domed_colony_barren$"
  pc_pd_domed_colony_barren_cold_desc: "$pc_pd_domed_colony_barren_desc$"
  pc_pd_domed_colony_barren_cold_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_barren_cold_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_barren_cold_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_barren_cold_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_barren_cold_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_barren_cold_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_barren_cold_preference_desc: "Placehold/Should not see."
  pc_pd_domed_colony_frozen: "穹顶殖民地（冰封星球）"
  pc_pd_domed_colony_frozen_desc: "一颗地表上覆盖着厚厚的永冻冰层的岩质星球。极低的温度和非常稀薄的大气令生命难以存活在它的地表上。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_frozen_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_frozen_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_frozen_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_frozen_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_frozen_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_frozen_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_frozen_preference_desc: "Placehold/Should not see."
  pc_pd_domed_colony_toxic: "穹顶殖民地（剧毒星球）"
  pc_pd_domed_colony_toxic_desc: "有剧毒大气层的岩石世界，任何高级生命体都无法生存。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_toxic_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_toxic_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_toxic_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_toxic_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_toxic_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_toxic_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_toxic_preference_desc: "Placehold/Should not see."
  pc_pd_domed_colony_superhabitable: "穹顶殖民地（超级类地星球）"
  pc_pd_domed_colony_superhabitable_desc: "这类超级类地星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_superhabitable_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_superhabitable_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_superhabitable_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_superhabitable_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_superhabitable_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_superhabitable_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_superhabitable_preference_desc: "Placehold/Should not see."
  pc_pd_domed_colony_tidally_locked: "穹顶殖民地（潮汐锁定星球）"
  pc_pd_domed_colony_tidally_locked_desc: "这一潮汐锁定星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_tidally_locked_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_tidally_locked_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_tidally_locked_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_tidally_locked_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_tidally_locked_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_tidally_locked_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_tidally_locked_preference_desc: "Placehold/Should not see."
  pc_pd_domed_colony_cave: "穹顶殖民地（岩洞星球）"
  pc_pd_domed_colony_cave_desc: "这类岩洞星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_cave_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_cave_habitability: "占位符，未使用"
- trait_pc_pd_domed_colony_cave_preference: "占位符，未使用"
- trait_pc_pd_domed_colony_cave_preference_desc: "占位符，未使用"
+ mod_pc_pd_domed_colony_cave_habitability: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_cave_preference: "Placehold/Should not see."
+ trait_pc_pd_domed_colony_cave_preference_desc: "Placehold/Should not see."
  hab_terraforming_candidate: "环境改造候选"
  hab_terraforming_candidate_desc: "尽管表面荒芜贫瘠毫无生机，这颗星球上仍存在有以冻结形态存在的水，这里也许曾经孕育过一个生机勃勃的生态系统。如果利用合适的科技加以环境改造，这里可能成为一个宜居的世界。"
  pd_domed_colony: "穹顶殖民地"
- pd_domed_colony_desc: "殖民地居民生活在先进的保护性穹顶网络下，免遭恶劣星球环境的侵扰。虽然是安全的居住地，这些结构却有着高昂的维护和扩建成本。"
+ pd_domed_colony_desc: "殖民地居民生活在先进的穹顶防护网络下，免遭恶劣星球环境的侵扰。虽然是安全的居住地，这些结构却有着高昂的维护和扩建成本。"
  pd_moon_base_trade: "商业卫星基地"
- pd_moon_base_trade_desc: "先进的保护性穹顶网络下都是商业区、仓库和太空港，使这里成为了繁华的贸易中心。这个穹顶基地联通着自己的母星，其存在全仰赖于临近宜居星球的不可或缺的联系。"
+ pd_moon_base_trade_desc: "先进的穹顶防护网络下都是商业区、仓库和太空港，使这里成为了繁华的贸易中心。这个穹顶基地联通着自己的母星，其存在全仰赖于临近宜居星球的不可或缺的联系。"
  pd_moon_base_military: "军事卫星基地"
- pd_moon_base_military_desc: "先进的保护性穹顶网络下都是军械库、兵营和发射台。这个穹顶基地依靠来自临近宜居星球的后勤供应。"
+ pd_moon_base_military_desc: "先进的穹顶防护网络下都是军械库、兵营和发射台。这个穹顶基地依靠来自临近宜居星球的后勤供应。"
  pd_moon_base_factory: "工业卫星基地"
- pd_moon_base_factory_desc: "先进的保护性穹顶网络下都是工厂、工坊和制造中心。这个穹顶基地联通着附近的宜居星球，其工业品的资源和配送都依赖于这种联系。"
+ pd_moon_base_factory_desc: "先进的穹顶防护网络下都是工厂、工坊和制造中心。这个穹顶基地联通着附近的宜居星球，其工业品的资源和配送都依赖于这种联系。"
  pd_moon_base_foundry: "铸造卫星基地"
- pd_moon_base_foundry_desc: "先进的保护性穹顶网络下都是铸造厂和合金加工厂。这一穹顶基地与母星紧密相连，其原材料和获取和合金成品的外输都仰赖于与附近宜居星球的基本联系。"
+ pd_moon_base_foundry_desc: "先进的穹顶防护网络下都是铸造厂和合金加工厂。这一穹顶基地与母星紧密相连，其原材料和获取和合金成品的外输都仰赖于与附近宜居星球的基本联系。"
  pd_moon_base_admin: "行政卫星基地"
- pd_moon_base_admin_desc: "先进的保护性穹顶网络下都是政府办公室和官僚机构。这个穹顶基地联通着自己的母星，其供给和维持全仰赖于临近宜居星球的至关重要的联系。"
+ pd_moon_base_admin_desc: "先进的穹顶防护网络下都是政府办公室和官僚机构。这个穹顶基地联通着自己的母星，其供给和维持全仰赖于临近宜居星球的至关重要的联系。"
  pd_moon_base_priest: "教会卫星基地"
- pd_moon_base_priest_desc: "先进的保护性穹顶网络下都是神殿和神龛，使这里成为了信徒的宗教中心。这个穹顶基地联通着自己的母星，其存在全仰赖于临近宜居星球的神圣联系。"
- pd_domed_base_research: "科研穹顶基地"
- pd_domed_base_research_desc: "先进的保护性穹顶网络下都是实验室和研究设施。它与星系内其他星球联通，依靠此种联系获得必要的资源。"
- pd_domed_base_mining: "采矿穹顶基地"
- pd_domed_base_mining_desc: "先进的保护性穹顶网络下都是矿山和开采设施。它联通着星系内其他星球，依靠此种联系来获取必要资源和运输开采矿物。"
- pd_domed_base_energy: "发电穹顶基地"
- pd_domed_base_energy_desc: "先进的保护性穹顶网络下都是发电厂和能量转换器。它与星系内其他星球联通，依靠此种联系获取必要资源和输送能量。"
- pd_domed_base_food: "水培穹顶基地"
- pd_domed_base_food_desc: "先进的保护性穹顶网络下都是水培农场和农业模块。它与星系内其他星球联通，依靠此种联系获取必要资源和运输食物。"
- pd_domed_moonbase_site: "卫星基址"
- pd_domed_moonbase_site_desc: "这颗卫星是建造穹顶基地的理想地点，但星系内需要一个已殖民星球，来保证其资源供给和持续能力。"
- pd_domed_research_site: "潜在研究穹顶基址"
- pd_domed_research_site_desc: "这颗行星是建造科研穹顶基地的理想地点，但星系内需要一个已殖民星球，来保证其资源供给和持续能力。"
- pd_domed_mining_site: "潜在采矿穹顶基址"
- pd_domed_mining_site_desc: "这颗行星是建造采矿穹顶基地的理想地点，但星系内需要一个已殖民星球，来保证其资源供给和持续能力。"
- pd_domed_food_site: "潜在水培穹顶基址"
- pd_domed_food_site_desc: "这颗行星是建造水培穹顶基地的理想地点，但星系内需要一个已殖民星球，来保证其资源供给和持续能力。"
- pd_domed_energy_site: "潜在发电穹顶基址"
- pd_domed_energy_site_desc: "这颗行星是建造发电穹顶基地的理想地点，但星系内需要一个已殖民星球，来保证其资源供给和持续能力。"
+ pd_moon_base_priest_desc: "先进的穹顶防护网络下都是神殿和神龛，使这里成为了信徒的宗教中心。这个穹顶基地联通着自己的母星，其存在全仰赖于临近宜居星球的神圣联系。"
+ pd_domed_base_research: "科研行星基地"
+ pd_domed_base_research_desc: "先进的穹顶防护网络下都是实验室和研究设施。它与星系内其他星球联通，依靠此种联系获得必要的资源。"
+ pd_domed_base_mining: "采矿行星基地"
+ pd_domed_base_mining_desc: "先进的穹顶防护网络下都是矿山和开采设施。它联通着星系内其他星球，依靠此种联系来获取必要资源和运输开采矿物。"
+ pd_domed_base_energy: "发电行星基地"
+ pd_domed_base_energy_desc: "先进的穹顶防护网络下都是发电厂和能量转换器。它与星系内其他星球联通，依靠此种联系获取必要资源和输送能量。"
+ pd_domed_base_food: "水培行星边沿基地"
+ pd_domed_base_food_desc: "先进的穹顶防护网络下都是水培农场和农业模块。它与星系内其他星球联通，依靠此种联系获取必要资源和运输食物。"
+ pd_domed_moonbase_site: "卫星基地基址"
+ pd_domed_moonbase_site_desc: "这颗卫星是建造边沿基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_research_site: "潜在科研行星基地基址"
+ pd_domed_research_site_desc: "这颗行星是建造科研穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_mining_site: "潜在采矿行星基地基址"
+ pd_domed_mining_site_desc: "这颗行星是建造采矿穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_food_site: "潜在水培行星基地基址"
+ pd_domed_food_site_desc: "这颗行星是建造水培穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
+ pd_domed_energy_site: "潜在发电行星基地基址"
+ pd_domed_energy_site_desc: "这颗行星是建造发电穹顶基地的理想地点，但星系内得有一颗已殖民星球，来保证其资源供给和运维能力。"
  d_phab_energy_1: "放射性同位素"
  d_phab_energy_1_desc: "这个地方有丰富的放射性同位素储藏，且易于开采，是高效发电的理想之选。"
  d_phab_energy_2: "冻气湖"
@@ -104,54 +104,54 @@
  d_phab_mining_3_desc: "这片山坡上点缀着各种矿藏和珍贵的石头。"
  d_phab_food_1: "氮矿"
  d_phab_food_1_desc: "这里散布的氮矿对于将环境改造为产粮沃土至关重要。"
- d_phab_food_2: "磷沉积物"
+ d_phab_food_2: "磷矿"
  d_phab_food_2_desc: "这里散布的磷矿对于将环境改造为产粮沃土至关重要。"
  d_phab_food_3: "钾矿"
  d_phab_food_3_desc: "这里散布的钾矿对于将环境改造为产粮沃土至关重要。"
  d_pd_solar_system_network_hub: "星系内网络枢纽"
- d_pd_solar_system_network_hub_desc: "这个枢纽是星系内穹顶哨站的重要一环。尽管穹顶基地可以提供就业和住房，维持行动所需的供给和资源却由核心殖民地提供。"
+ d_pd_solar_system_network_hub_desc: "这个枢纽是星系内行星边沿基地的重要一环。穹顶基地可以提供就业和住房，维持运作所需的补给和资源则来自核心殖民地。"
  tech_pd_domed_colonies: "穹顶居住站"
- tech_pd_domed_colonies_desc: "技术技术进步使得在非宜居的边缘星球建立穹顶殖民地成为可能。"
- allow_domed_colonies: "§H解锁巨构：§!§Y穹顶殖民地§!和§Y穹顶基地§!"
+ tech_pd_domed_colonies_desc: "技术进步使得在非宜居的边缘星球建立穹顶殖民地成为可能。"
+ allow_domed_colonies: "§H解锁巨构：§!§Y穹顶殖民地§!和§Y边沿基地§!"
  allow_domed_colonies_DETAILS: "这项技术可以在一些不宜居星球上建立穹顶殖民地和穹顶基地。"
  decision_build_solar_system_network_hub: "建造$d_pd_solar_system_network_hub$"
- decision_build_solar_system_network_hub_desc: "我们会建造一个枢纽，使星系内的行星穹顶基地接入该星球的经济网络。"
+ decision_build_solar_system_network_hub_desc: "我们会建立一个枢纽，使星系内的边沿基地接入该星球的经济网络。"
  decision_remove_solar_system_network_hub: "移除$d_pd_solar_system_network_hub$"
- decision_remove_solar_system_network_hub_desc: "我们将移除星系内的行星穹顶基地与该星球经济网络的连接枢纽。"
- decision_change_moon_base: "替换卫星穹顶基地"
- decision_change_moon_base_desc: "这会改变此卫星上的穹顶基地。"
- decision_change_moon_base_effects: "我们可以给这个卫星的穹顶基地选择一种不同的用途。"
+ decision_remove_solar_system_network_hub_desc: "我们将移除星系内的边沿基地与该星球经济网络的连接枢纽。"
+ decision_change_moon_base: "替换卫星基地"
+ decision_change_moon_base_desc: "这会改变这颗卫星上的边沿基地。"
+ decision_change_moon_base_effects: "我们可以给这颗卫星的边沿基地选择一种不同的用途。"
  decision_pd_flood_domed_colony: "淹灌穹顶殖民地"
  decision_pd_flood_domed_colony_desc: "穹顶殖民地可以成为理想的居所——只要那里有充足的水。我们的冰开采网络能让我们从其他的天体开采冰，灌淹[This.GetName]，让此地变成一个完美的轨道水族馆。"
- pddomebases.100.name: "[From.GetName]穹顶基地完成"
- pddomebases.100.desc: "§Y[From.GetName]§!上穹顶基地的建设已经完成。\n\n该如何决定它的职能呢？"
+ pddomebases.100.name: "[From.GetName]卫星基地完成"
+ pddomebases.100.desc: "§Y[From.GetName]§!的卫星基地已经建设完毕。\n\n应该为它设立何种职能？"
  pddomebases.100.trade: "商业卫星基地"
- pddomebases.100.trade.tt: "这一卫星穹顶基地会连接到本地行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_trader£ $job_trader_plural$。"
+ pddomebases.100.trade.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_trader£ $job_trader_plural$。"
  pddomebases.100.military: "军事卫星基地"
- pddomebases.100.military.tt: "这一卫星穹顶基地会连接到本地行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_soldier£ [GetSoldierPlural]。"
+ pddomebases.100.military.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_soldier£ [GetSoldierPlural]。"
  pddomebases.100.factory: "工业卫星基地"
- pddomebases.100.factory.tt: "这一卫星穹顶基地会连接到本地行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的[GetArtisanIcon][GetArtisanPlural]。"
+ pddomebases.100.factory.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的[GetArtisanIcon][GetArtisanPlural]。"
  pddomebases.100.foundry: "铸造卫星基地"
- pddomebases.100.foundry.tt: "这一卫星穹顶基地会连接到本地行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_foundry£ §Y[GetAlloyProducerPlural]§!。"
+ pddomebases.100.foundry.tt: "这一卫星基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的£job_foundry£ §Y[GetAlloyProducerPlural]§!。"
  pddomebases.100.admin: "行政卫星基地"
- pddomebases.100.admin.tt: "这一卫星穹顶基地会连接到本地行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的[GetAdministratorWithIcon]。"
+ pddomebases.100.admin.tt: "这一边沿基地会连接到所属行星的§Y$d_pd_solar_system_network_hub$§!，为与之相连的殖民地提供额外的[GetAdministratorWithIcon]。"
  pddomebases.100.priest: "教会卫星基地"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
  origin_pd_interplanetary_settlers: "行星际殖民"
  origin_pd_interplanetary_settlers_desc: "在他们触及其它恒星以前，这个帝国就为自己打好了基础，建立了遍布于母星系卫星和行星的穹顶居住站。现在，有了FTL技术，他们站在新时代的开端，准备触摸未知的宙域。"
  origin_tooltip_pd_interplanetary_settlers_start_effects: "—$INITIAL_POPS$§G+2§!$NEW_LINE$—$HOMEWORLD$$TABBED_NEW_LINE$—['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$—母星的卫星：$TABBED_NEW_LINE$—['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$—殖民地：$TABBED_NEW_LINE$—['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$—$ADDITONAL_TECHNOLOGIES_STRING$['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
  pd_interplanetary_system_initializer_NAME: "随机穹顶星系"
- pd_interplanetary_system_initializer_DESC: "随机初始星系，附带一个穹顶殖民地和一个穹顶基地。"
+ pd_interplanetary_system_initializer_DESC: "随机初始星系，附带一个穹顶殖民地和一个边沿基地。"
  pd_interplanetary_sol_system_initializer_NAME: "太阳系（穹顶星系）"
- pd_interplanetary_sol_system_initializer_DESC: "太阳系初始星系，附带一个穹顶殖民地和一个穹顶基地。"
+ pd_interplanetary_sol_system_initializer_DESC: "以太阳系作为初始星系，附带一个穹顶殖民地和一个边沿基地。"
  concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
- concept_pd_network_hub_desc: "根据首府级别和星系内已建造的['concept_pd_moonbases', 穹顶基地]来添加更多岗位。\n\n§L$d_pd_solar_system_network_hub_desc$§!"
- concept_pd_moonbase: "穹顶基地"
- concept_pd_moonbase_desc: "这些基地会与星系内的任何§Y$d_pd_solar_system_network_hub$§!连接，为行星提供额外岗位。\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
+ concept_pd_network_hub_desc: "根据首府级别和星系内已建造的['concept_pd_moonbases', 行星边沿基地]来添加更多岗位。\n\n§L$d_pd_solar_system_network_hub_desc$§!"
+ concept_pd_moonbase: "边沿基地"
+ concept_pd_moonbase_desc: "星系内若是存在任何§Y$d_pd_solar_system_network_hub$§!，这些边沿基地就会与之连接，为行星提供额外岗位。\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
  concept_pd_domed_colony: "穹顶殖民地"
- concept_pd_domed_colony_desc: "建造在拥有§Y$terraforming_candidate$§!修正的行星上，可以在环境改造之前就进行殖民。\n\n§L$pd_domed_colony_0_MEGASTRUCTURE_DETAILS$§!"
+ concept_pd_domed_colony_desc: "建造在拥有§Y$terraforming_candidate$§!修正的行星上，可以不经环境改造就进行殖民。\n\n§L$pd_domed_colony_0_MEGASTRUCTURE_DETAILS$§!"
  concept_tech_pd_domed_colonies: "$tech_pd_domed_colonies$"
  concept_tech_pd_domed_colonies_desc: "$allow_domed_colonies$\n\n§L$tech_pd_domed_colonies_desc$§!"
- concept_pd_moonbases: "穹顶基地"
+ concept_pd_moonbases: "边沿基地"
  concept_pd_domed_colonies: "穹顶殖民地"
- requires_no_terraforming:1 "$TRIGGER_FAIL$不可建造于正在进行环境改造的星球上。"
+ requires_no_terraforming:1 "$TRIGGER_FAIL$不可建造于正在执行环境改造的星球。"
