--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  pdengine.21.name: "环境改造完成"
- pdengine.21.desc: "§Y[From.GetName]§!的改造工作已接近尾声，我们获得了一个机会，可为这颗星球重新选择一类生态构成。"
+ pdengine.21.desc: "§Y[From.GetName]§!的改造工作已接近尾声，我们可以趁此机会，为这颗星球重新选择一类生态构成。"
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -75,14 +75,13 @@
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
  pdengine.21.striped: "$pc_pd_striped$"
- pdengine.21.amethyst: "$pc_pd_amethyst$"
  pdengine.24.name: "盖亚星球改造完成"
- pdengine.24.desc: "§Y[Root.GetName]§!的改造工作已接近尾声，我们获得了一个机会，可为这颗宜人的星球重新选择一种生态构成。"
+ pdengine.24.desc: "§Y[Root.GetName]§!的改造工作已接近尾声，我们可以趁此机会，为这颗宜人的星球重新选择一种生态构成。"
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
  pdengine.90.name: "$civic_life_seeded$生物群系"
- pdengine.90.desc: "这颗名为§Y[Capital_scope.GetName]§!的星球，乃是我们发端的乐土。构成我们母星的生态环境是？"
+ pdengine.90.desc: "这颗名为§Y[Capital_scope.GetName]§!的星球，乃是我们发端的乐土。我们母星的生态环境是什么样子？"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -94,11 +93,10 @@
  pdengine.21.algae: "$pc_pd_algae$"
  pdengine.21.aerial: "$pc_pd_aerial$"
  pdengine.21.sandstone: "$pc_pd_sandstone$"
- pdengine.21.turquoise: "$pc_pd_turquoise$"
  pdengine.21.lilypad: "$pc_pd_lilypad$"
  pdengine.21.blossom: "$pc_pd_blossom$"
  pdengine.96.name: "盖亚星球改造完成"
- pdengine.96.desc: "随着§Y[From.GetName]§!的环境改造即将完成，我们有机会为此理想星球选择一类新的生物群系。"
+ pdengine.96.desc: "§Y[From.GetName]§!的改造工作已接近尾声，我们可以趁此机会，为这颗宜人的星球重新选择一种生态构成。"
  pdengine.96.wet_gaia_cave: "湿润气候"
  pdengine.96.dry_gaia_cave: "干燥气候"
  pdengine.96.cold_gaia_cave: "寒冷气候"
@@ -109,3 +107,5 @@
  pdengine.96.dry_gaia_tidally_locked: "干燥气候"
  pdengine.96.cold_gaia_tidally_locked: "寒冷气候"
  pdengine.21.sakura: "$pc_pd_sakura$"
+ pdengine.21.amethyst: "$pc_pd_amethyst$"
+ pdengine.21.turquoise: "$pc_pd_turquoise$"
