--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -3,13 +3,13 @@
  policy_pd_terraforming_desc: "我们可以决定科学家进行环境改造的方式。"
  pd_choose_every_planet_terraforming_name: "各星球都重选生态构成"
  pd_choose_every_planet: "各星球都重选生态构成"
- pd_choose_every_planet_desc: "每当有星球完成环境改造时，都能决定其生态构成类型。"
+ pd_choose_every_planet_desc: "每当有星球完成环境改造时，都能为其单独选择一种生态构成类型。"
  pd_same_as_homeworld_terraforming_name: "生态构成与母星一致"
  pd_same_as_homeworld: "生态构成与母星一致"
- pd_same_as_homeworld_desc: "合适的星球均会改造为相同类型，其余的则是随机决定。"
+ pd_same_as_homeworld_desc: "合适的星球都会改造为同类型的生态构成，其他星球则是随机选择。"
  pd_random_same_class_terraforming_name: "从相似生态构成中随机选择"
  pd_random_same_class: "从相似生态构成中随机选择"
- pd_random_same_class_desc: "会在同星球类别下的生态构成中随机挑选一种。"
+ pd_random_same_class_desc: "会从同星球类别下的生态构成中随机挑选一种。"
  climate_superhabitables: "超级类地"
  climate_cavern: "岩洞"
  climate_tidallyocked: "潮汐锁定"
