--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_more_arcs_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_more_arcs_l_simp_chinese.yml
@@ -1,9 +1,9 @@
 ﻿l_simp_chinese:
- decision_pd_ma_hive_overmind_project: "蜂巢星球计划——主脑"
+ decision_pd_ma_hive_overmind_project: "蜂巢星球计划：主脑"
  decision_pd_ma_hive_overmind_project_desc: "这一蜂巢星球会被重塑为蜂群高级思维进程的堡垒。"
  decision_pd_ma_hive_overmind_project_effects: "将星球转变为§Y$pc_pd_hive_superhabitable$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源将变得§R无法开发§!，不可建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_ma_hive_overmind_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
- decision_pd_ma_machine_nexus_project: "机械星球计划——枢纽"
+ decision_pd_ma_machine_nexus_project: "机械星球计划：枢纽"
  decision_pd_ma_machine_nexus_project_desc: "这一机械星球会拓展成先进子程序的堡垒。"
  decision_pd_ma_machine_nexus_project_effects: "将星球转变为§Y$pc_pd_hive_superhabitable$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源将变得§R无法开发§!，不可建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_ma_machine_nexus_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
