--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -185,7 +185,7 @@
  mod_pc_pd_fog_desert_habitability: "干旱星球宜居性"
  trait_pc_pd_fog_desert_preference: "干旱星球偏好"
  trait_pc_pd_fog_desert_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_mediterranean: "地中海星球"
+ pc_pd_mediterranean: "陆间海星球"
  pc_pd_mediterranean_desc: "拥有氮氧大气的干燥岩石星球。水圈仅可维持几个大型内陆海，周围生长着稀疏的草木和灌丛。远离水域的地区环境非常干旱。"
  pc_pd_mediterranean_adj: "炎热"
  mod_pc_pd_mediterranean_habitability: "干旱星球宜居性"
@@ -461,18 +461,12 @@
  trait_pc_pd_gaia_cave_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_barren_cave: "岩洞星球（荒芜）"
  pc_pd_barren_cave_desc: "这类岩洞星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式；不过地表下隐藏着规模庞大的洞穴网络。"
- pc_pd_striped: "彩丘星球"
+ pc_pd_striped: "彩色丘陵星球"
  pc_pd_striped_desc: "这是一颗干燥、拥有氮氧大气的岩石星球；环境干旱，沙尘遍布，有着颜色绚丽的矿物构造。"
  pc_pd_striped_adj: "彩丘"
  mod_pc_pd_striped_habitability: "干旱星球宜居性"
  trait_pc_pd_striped_preference: "干旱星球偏好"
  trait_pc_pd_striped_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_amethyst: "Amethyst World"
- pc_pd_amethyst_desc: "This arid world had a highly active geological past, resulting in extensive deposits of amethyst quartz throughout the planets crust."
- pc_pd_amethyst_adj: "quartzed"
- mod_pc_pd_amethyst_habitability: "Arid Habitability"
- trait_pc_pd_amethyst_preference: "Arid Preference"
- trait_pc_pd_amethyst_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_carbon: "碳星"
  pc_carbon_desc: "这是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。不同于大部分以硅-氧作为主要组分的星球，这类星球拥有更高的碳-氧比。"
  pc_iron: "铁星"
@@ -638,12 +632,6 @@
  mod_pc_pd_sandstone_habitability: "草原星球宜居性"
  trait_pc_pd_sandstone_preference: "草原星球偏好"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_turquoise: "Turquoise World"
- pc_pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
- pc_pd_turquoise_adj: "turquoise"
- mod_pc_pd_turquoise_habitability: "Savannah Habitability"
- trait_pc_pd_turquoise_preference: "Savannah Preference"
- trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_lilypad: "睡莲星球"
  pc_pd_lilypad_desc: "这类草木葱郁的岩石星球被致密的氮氧大气包裹着，孕育出温暖的浅海以及生意盎然的丰富生命。水生植物强韧的叶片构成了地表的次级生态系统。"
  pc_pd_lilypad_adj: "漂浮"
@@ -662,3 +650,15 @@
  mod_pc_pd_sakura_habitability: "陆地星球宜居性"
  trait_pc_pd_sakura_preference: "陆地星球偏好"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_amethyst: "紫水晶星球"
+ pc_pd_amethyst_desc: "这颗干旱星球过去地质活动相当活跃。因而地壳中蕴藏着丰富的紫水晶石英矿。"
+ pc_pd_amethyst_adj: "石英"
+ mod_pc_pd_amethyst_habitability: "干旱星球宜居性"
+ trait_pc_pd_amethyst_preference: "干旱星球偏好"
+ trait_pc_pd_amethyst_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_turquoise: "绿松石星球"
+ pc_pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
+ pc_pd_turquoise_adj: "绿松石"
+ mod_pc_pd_turquoise_habitability: "草原星球宜居性"
+ trait_pc_pd_turquoise_preference: "草原星球偏好"
+ trait_pc_pd_turquoise_preference_desc: "$trait_pc_arctic_preference_desc$"
