--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -71,7 +71,7 @@
  pd_mesa_desc: "赤道高原和极地森林是这里的主要环境。主要的水体是峭壁间的大河，河床上植物繁茂，景观各异。"
  pd_fog_desert: "雾漠世界"
  pd_fog_desert_desc: "海拔极高的山峰导致了大部分地区都存在的雨影现象，盐坪和干谷是高原地区的普遍地貌。水体主要是一些湖泊和山泉。"
- pd_mediterranean: "地中海世界"
+ pd_mediterranean: "陆间海世界"
  pd_mediterranean_desc: "水源维系着广阔的内陆海，周围生长着稀疏的植被。内陆地区降水稀少，非常干旱。"
  pd_badlands: "恶地世界"
  pd_badlands_desc: "干旱的环境中遍布着风蚀和水蚀塑成的沉积岩和黏土土壤。植被大多为山阴生长的灌木和杂草。"
@@ -171,10 +171,8 @@
  pd_cold_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
  pd_gaia_cave: "岩洞世界（盖亚）"
  pd_gaia_cave_desc: "这类岩洞星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
- pd_striped: "彩丘世界"
+ pd_striped: "彩色丘陵世界"
  pd_striped_desc: "这里呈现出迷人的地质构造。深邃的绚烂条纹是此地的特征，为干旱多沙的环境增添了一分靓丽。"
- pd_amethyst: "Amethyst World"
- pd_amethyst_desc: "This arid world had a highly active geological past, resulting in extensive deposits of amethyst quartz throughout the planets crust."
  pd_diamond: "金刚石世界"
  pd_diamond_desc: "这里碳元素含量极高，加上高温高压条件，该星球的大部分物质都被塑造成了金刚石。"
  pd_carbon: "碳星"
@@ -248,11 +246,13 @@
  pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
  pd_sandstone: "砂岩世界"
  pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
- pd_turquoise: "$pc_pd_turquoise$"
- pd_turquoise_desc: "This subtropical grassland planet is studded with vast deposits of turquoise gemstones, which are found almost everywhere on its surface."
  pd_blossom: "花簇世界"
  pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
  pd_lilypad: "睡莲世界"
  pd_lilypad_desc: "星球上温暖的浅海供养着丰富多样的生命。水生植物强韧的叶片构成了地表的次级生态系统。"
  pd_sakura: "樱花世界"
  pd_sakura_desc: "大陆被海洋分隔，茂密而绚丽的花树森林覆盖着大地。"
+ pd_amethyst: "紫水晶世界"
+ pd_amethyst_desc: "这颗干旱星球过去地质活动相当活跃。因而地壳中蕴藏着丰富的紫水晶石英矿。"
+ pd_turquoise: "绿松石世界"
+ pd_turquoise_desc: "这颗亚热带草原星球上分布着密集的绿松石矿床，在地表几乎随处可见。"
