--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -31,8 +31,8 @@
  mod_job_pd_naval_admin_gestalt_per_pop: "每$VALUE$人口§G+1§!$job_pd_naval_admin_gestalt$岗位"
  mod_job_pd_naval_admin_gestalt_per_pop_short: "\n每$VALUE$ £pop£ §G+1§! £mod_job_pd_naval_admin_gestalt_add£"
  job_pd_naval_admin_gestalt_effect_desc: "£job_pd_naval_admin_gestalt£ $job_pd_naval_admin_gestalt_plural$将£minerals£ §Y$minerals$§!转化为£society£ §Y研究点§!和£mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!，以此提升海军的效率。"
- job_pd_capital_bio_politician: "活体政客"
- job_pd_capital_bio_politician_plural: "活体政客"
+ job_pd_capital_bio_politician: "活体陈设政客"
+ job_pd_capital_bio_politician_plural: "活体陈设政客"
  job_pd_capital_bio_politician_desc: "某些活体陈设觉得自己比其他人更显赫时，他们会表现得更为满足。此类主导地位的存在对这些个体的精神状态与所有个体的幸福感都有着正面影响。"
  mod_job_pd_capital_bio_politician_add: "$job_pd_capital_bio_politician$岗位"
  mod_job_pd_capital_bio_politician_per_pop: "每$VALUE$人口§G+1§!$job_pd_capital_bio_politician$岗位"
@@ -44,42 +44,42 @@
  building_navel_base_desc: "这座行星军事基地是一个星际堡垒，是我们舰队的关键支援中心之一。"
  building_navel_command: "海军指挥中心"
  building_navel_command_desc: "这座军事设施是一个庞大的指挥要塞，是星际舰队战略管理的决策中枢。"
- decision_pd_garden_arcology_project: "理想城计划——花园"
+ decision_pd_garden_arcology_project: "理想城计划：花园"
  decision_pd_garden_arcology_project_desc: "将绿地“织入”理想城的构造中，可以发展成自然与都市和谐共生的宏伟普世城。"
  decision_pd_garden_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源会变为§R无法开发§!，不能建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_garden_arcology_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
- decision_pd_garden_arcology_project_relic: "重建普世城——花园"
+ decision_pd_garden_arcology_project_relic: "重建普世城：花园"
  decision_pd_garden_arcology_project_relic_desc: "这颗行星曾经是一个充满生机的普世城。重建星球的任务十分艰巨，但我们可以使其恢复为花园理想城。"
  decision_pd_garden_arcology_project_relic_effects: "$decision_pd_garden_arcology_project_effects$"
  decision_pd_garden_arcology_project_relic_effects_short: "$decision_pd_garden_arcology_project_effects_short$"
- decision_pd_fortress_arcology_project: "理想城计划——堡垒"
+ decision_pd_fortress_arcology_project: "理想城计划：堡垒"
  decision_pd_fortress_arcology_project_desc: "在理想城周围整合强化结构和先进防御设施，我们可以建成一座可畏的堡垒。"
  decision_pd_fortress_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源会变为§R无法开发§!，不能建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_fortress_arcology_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
- decision_pd_fortress_arcology_project_relic: "重建普世城——堡垒"
+ decision_pd_fortress_arcology_project_relic: "重建普世城：堡垒"
  decision_pd_fortress_arcology_project_relic_desc: "这颗行星曾经是一个充满生机的普世城。重建星球的任务十分艰巨，但我们可以使其恢复为堡垒理想城。"
  decision_pd_fortress_arcology_project_relic_effects: "$decision_pd_fortress_arcology_project_effects$"
  decision_pd_fortress_arcology_project_relic_effects_short: "$decision_pd_fortress_arcology_project_effects_short$"
- decision_pd_commerical_arcology_project: "理想城计划——商业"
+ decision_pd_commerical_arcology_project: "理想城计划：商业"
  decision_pd_commerical_arcology_project_desc: "在理想城的构造中妥善安排市场和贸易网络，我们可以建成一个繁荣的商业中心。"
  decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源会变为§R无法开发§!，不能建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_commerical_arcology_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
- decision_pd_commerical_arcology_project_relic: "重建普世城——商业"
+ decision_pd_commerical_arcology_project_relic: "重建普世城：商业"
  decision_pd_commerical_arcology_project_relic_desc: "这颗行星曾经是一个充满生机的普世城。重建星球的任务十分艰巨，但我们可以使其恢复为商业理想城。"
  decision_pd_commerical_arcology_project_relic_effects: "$decision_pd_commerical_arcology_project_effects$"
  decision_pd_commerical_arcology_project_relic_effects_short: "$decision_pd_commerical_arcology_project_effects_short$"
- pc_pd_fortress_city: "占位符，未使用"
- pc_pd_fortress_city_desc: "占位符，未使用"
+ pc_pd_fortress_city: "Dummy-Class, do not use."
+ pc_pd_fortress_city_desc: "Dummy-Class, do not use."
  pc_pd_fortress_city_adj: "城市"
- mod_pc_pd_fortress_city_habitability: "占位符，未使用"
- trait_pc_pd_fortress_city_preference: "占位符，未使用"
- trait_pc_pd_fortress_city_preference_desc: "占位符，未使用"
- pc_pd_commerical_city: "占位符，未使用"
- pc_pd_commerical_city_desc: "占位符，未使用"
- pc_pd_commerical_city_adj: "占位符，未使用"
- mod_pc_pd_commerical_city_habitability: "占位符，未使用"
- trait_pc_pd_commerical_city_preference: "占位符，未使用"
- trait_pc_pd_commerical_city_preference_desc: "占位符，未使用"
+ mod_pc_pd_fortress_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_fortress_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_fortress_city_preference_desc: "Dummy-Class, do not use."
+ pc_pd_commerical_city: "Dummy-Class, do not use."
+ pc_pd_commerical_city_desc: "Dummy-Class, do not use."
+ pc_pd_commerical_city_adj: "Dummy-Class, do not use."
+ mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
  pc_pd_hive: "蜂巢主脑星球"
  pc_pd_hive_desc: "这整个世界其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_adj: "$pc_hive_adj$"
@@ -114,11 +114,11 @@
  pd_hive_military_desc: "这个星球对蜂群思维的核心机能至关重要，因而加强了对外部威胁与干涉的防御。强大的护盾包裹着整个星球，作战子个体随时待命，确保星球卫戍。"
  pd_machine_military: "枢纽星球"
  pd_machine_military_desc: "这一行星单元是机械智能运作矩阵的构成部分。无懈可击的防御系统将它包裹其中，保护其免受外部干扰。作战单位永远待命，保卫行星单元完好无损。"
- decision_pd_hive_overmind_project: "蜂巢星球计划——主脑"
+ decision_pd_hive_overmind_project: "蜂巢星球计划：主脑"
  decision_pd_hive_overmind_project_desc: "这一蜂巢星球会被重塑为蜂群高级思维进程的堡垒。"
  decision_pd_hive_overmind_project_effects: "将星球转变为§Y$pc_pd_hive$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源将变得§R无法开发§!，不可建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_hive_overmind_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
- decision_pd_machine_nexus_project: "机械星球计划——枢纽"
+ decision_pd_machine_nexus_project: "机械星球计划：枢纽"
  decision_pd_machine_nexus_project_desc: "这一机械星球会拓展成先进子程序的堡垒。"
  decision_pd_machine_nexus_project_effects: "将星球转变为§Y$pc_pd_hive$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源将变得§R无法开发§!，不可建造更多的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_machine_nexus_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
@@ -133,9 +133,14 @@
  mod_job_pd_robo_ranger_per_pop: "每$VALUE$人口§G+1§!$$job_pd_robo_ranger$岗位"
  mod_job_pd_robo_ranger_per_pop_short: "\n每$VALUE$£pop£§G+1§!£mod_job_pd_robo_ranger_add£"
  job_pd_robo_ranger_effect_desc: "£job_pd_robo_ranger£ $job_pd_robo_ranger_plural$产出£amenities£ §Y舒适度§!和£society_research£ §Y$society_research$§!。"
- pc_pd_garden_city: "占位符，未使用"
- pc_pd_garden_city_desc: "占位符，未使用"
- pc_pd_garden_city_adj: "占位符，未使用"
- mod_pc_pd_garden_city_habitability: "占位符，未使用"
- trait_pc_pd_garden_city_preference: "占位符，未使用"
- trait_pc_pd_garden_city_preference_desc: "占位符，未使用"
+ pc_pd_garden_city: "Dummy-Class, do not use."
+ pc_pd_garden_city_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city_adj: "Dummy-Class, do not use."
+ mod_pc_pd_garden_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
+
+###Tooltips
+ decision_pd_garden_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
+ decision_pd_miltary_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
+ decision_pd_commerical_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$- §Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
