--- a/planetary_diversity_ascension_worlds/localisation/english/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/english/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -86,9 +86,9 @@
  district_pd_flora_hive_industrial: "Industiral District"
  district_pd_flora_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials"
  district_pd_flora_hive_industrial_plural: "Industiral Districts"
- district_pd_flora_hive_naval: "Logisitcal District"
+ district_pd_flora_hive_naval: "Logistical District"
  district_pd_flora_hive_naval_desc: "The drones here optismize navy operations to maximum efficiency."
- district_pd_flora_hive_naval_plural: "Logisitcal Districts"
+ district_pd_flora_hive_naval_plural: "Logistical Districts"
  district_pd_flora_hive_research: "Research District"
  district_pd_flora_hive_research_desc: "Countless laboratories filled with focused research drones"
  district_pd_flora_hive_research_plural: "Research Districts"
