--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_lithoid_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_lithoid_l_simp_chinese.yml
@@ -20,7 +20,7 @@
  ap_pd_lithoid_worlds: "无机营养星球"
  ap_pd_lithoid_worlds_desc: "我们会将我们的星球改造为坚固的无机天堂，锻造成永远稳定的基岩。"
  allow_lithoid_worlds: "§H解锁决议：§!$decision_pd_aw_lithoid_planet$"
- describe_lithoid_worlds: "§Y无机营养星球§!是特殊的星球类型，拥有基于无机营养的生态系统。它可以使大型晶体结构产生频率谐调，改善$i_unity$、$i_minerals$或$i_energy$。\n$MOD_LITHOID_POP_HAPPINESS$：§G25%§!\n$mod_LITHOID_pop_growth_speed$：§G20§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$：§R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$：§R-50%§!"
+ describe_lithoid_worlds: "§Y无机营养星球§!是特殊的星球类型，拥有基于无机营养的生态系统。它可以使大型晶体结构产生频率谐调，改善$i_unity$、$i_minerals$或$i_energy$。\n$MOD_LITHOID_POP_HAPPINESS$：§G25%§!\n$mod_LITHOID_pop_growth_speed$：§G25%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$：§R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$：§R-50%§!"
  MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$现在是§Y无机营养星球§!了"
  MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "无机营养生态已完成"
  MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "$PLANET|Y$的生物生态已被修复。"
