--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
@@ -53,7 +53,7 @@
  ap_pd_necro_worlds: "墓城世界"
  ap_pd_necro_worlds_desc: "我们的星球渴望变成一座延绵不断的神殿，回荡我们意义永恒的遗产的低语。"
  allow_necro_worlds: "§H解锁决议：§!$decision_pd_aw_necro_planet$"
- describe_necro_worlds: "非普世城\n$t$—解锁建造：£district£ ['district:district_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_farming']\n环世界\n$t$—解锁建造：£district£ ['district:district_rw_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_rw_farming']\n\n解锁§Y行星死光§!巨像武器§R（需要§Y$ap_colossus$§!飞升天赋）§!。"
+ describe_necro_worlds: "非都市星球\n$t$—解锁建造：£district£ ['district:district_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_farming']\n环世界\n$t$—解锁建造：£district£ ['district:district_rw_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_rw_farming']\n\n解锁§Y行星死光§!巨像武器§R（需要§Y$ap_colossus$§!飞升天赋）§!。"
  district_pd_aw_necro: "墓城区划"
  district_pd_aw_necro_plural: "墓城区划"
  district_pd_aw_necro_desc: "这些尖塔是我们遗存的实证，关乎我们的永恒意义。"
@@ -71,9 +71,9 @@
  MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY: "被彻底灭活"
  pd_necro_ray.02.name: "行星灭活"
  pd_necro_ray.02.desc: "随着从[FromFrom.GetName]降下的纳米机器人光柱逐渐消散，[From.GetName]的表面完全改变了。现在这里只剩一座坟墓。"
- pd_necro_ray.02.tooltip: "星球变为§Y$pd_aw_necro_planet$§!。\n所有机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质。"
+ pd_necro_ray.02.tooltip: "星球变为§Y$pd_aw_necro_planet$§!。\n所有机械人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质。"
  is_not_necro: "§R$TRIGGER_FAIL$目标已经是§Y$pd_aw_necro_planet$§!了§!"
- will_purge_robots_and_zombie: "§R机器人人口都会摧毁，生物人口会获得§Y$trait_zombie$§!特质§!"
+ will_purge_robots_and_zombie: "§R机械人口会被摧毁，生物人口会获得§Y$trait_zombie$§!特质§!"
  opinion_pd_necro_a_world: "灭活了一个星球"
  opinion_pd_necro_my_world: "灭活了我们的星球"
  opinion_pd_necro_a_primitive_world: "灭活一个原始星球"
