--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
@@ -16,7 +16,7 @@
  tech_pd_planetary_core_tap_desc: "建造深入星球地核的机械网络，以生态系统作为代价，我们可以产出数量惊人的能源。"
  tech_pd_planetary_core_tap_tooltip: "§H解锁决议：§!$decision_pd_aw_core_tap$"
  pc_pd_agriworld: "农耕星"
- pc_pd_agriworld_desc: "这颗岩石星球上尽是无穷无尽的工业化农场，严重依赖强效肥料、复合气象控制和现金灌溉系统。虽然它维持着无穷无尽的出产，却已经取代星球本来的生态系统。"
+ pc_pd_agriworld_desc: "这颗岩石星球上尽是无穷无尽的工业化农场，严重依赖强效肥料、复合气象控制和先进灌溉系统。虽然它维持着无穷无尽的出产，却已经取代星球本来的生态系统。"
  pc_pd_agriworld_adj: "农业"
  mod_pc_pd_agriworld_habitability: "农耕世界宜居性"
  trait_pc_pd_agriworld_preference: "农耕世界偏好"
@@ -25,7 +25,7 @@
  decision_pd_aw_agriworld_desc: "将星球改造为农耕世界，我们将建立广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
  decision_pd_agriworld_requirements: "£trigger_no£ §R不能有§Y$district_farming_plural$§!以外的其它区划§!"
  pd_aw_agriworld: "农耕星"
- pd_aw_agriworld_desc: "这颗岩石星球的工业化农场，严重依赖强效肥料、复合气象控制和现金灌溉系统。"
+ pd_aw_agriworld_desc: "这颗岩石星球的工业化农场，严重依赖强效肥料、复合气象控制和先进灌溉系统。"
  tech_pd_planetary_agriworld: "行星超级工程：农耕星"
  tech_pd_planetary_agriworld_desc: "将星球改造为农耕世界，我们将建立广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
  tech_pd_planetary_agriworld_tooltip: "§H解锁决议：§!$decision_pd_aw_agriworld$"
