--- a/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -22,8 +22,8 @@
  district_arcology_pd_trade: "Commercial Arcology"
  district_arcology_pd_trade_plural: "Commercial Arcologie"
  district_arcology_pd_trade_desc: "Great commercial spires and towers rise towards the sky, their imposing forms blotting out the light."
- district_pd_arcology_naval: "Logisitcal Arcology"
- district_pd_arcology_naval_plural: "Logisitcal Arcologies"
+ district_pd_arcology_naval: "Logistical Arcology"
+ district_pd_arcology_naval_plural: "Logistical Arcologies"
  district_pd_arcology_naval_desc: "Office stacks and situation rooms optimize navy operations to maximum efficiency."
 
 #Jobs
@@ -138,8 +138,8 @@
  district_pd_hive_industrial: "Industiral District"
  district_pd_hive_industrial_plural: "Industiral Districts"
  district_pd_hive_industrial_desc: "Smelting facilities and factories fill this district, creating advanced products out of raw materials."
- district_pd_gestalt_naval: "Logisitcal District"
- district_pd_gestalt_naval_plural: "Logisitcal Districts"
+ district_pd_gestalt_naval: "Logistical District"
+ district_pd_gestalt_naval_plural: "Logistical Districts"
  district_pd_gestalt_naval_desc: "The drones here optimize navy operations to maximum efficiency."
  district_pd_gestalt_research: "Research District"
  district_pd_gestalt_research_plural: "Research Districts"
@@ -168,3 +168,7 @@
  decision_pd_machine_nexus_project_effects: "Turns the planet into an §Y$pc_pd_hive$§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YArcology Districts§! at the expense of the planet's natural resources becoming §Rinaccessible§!, preventing all further construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!."
  decision_pd_machine_nexus_project_effects_short: "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
 
+###Tooltips
+ decision_pd_garden_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
+ decision_pd_miltary_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
+ decision_pd_commerical_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$- §Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
