--- a/planetary_diversity_uniques/localisation/braz_por/pd_uniques_l_braz_por.yml
+++ b/planetary_diversity_uniques/localisation/braz_por/pd_uniques_l_braz_por.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_braz_por:
 ###Floating World
  sr_eludium:0 "Eludium Ore"
  sr_eludium_desc:0 "This exotic substance possesses many properties that defy the laws of physics. Only on this planet can it alter the mass of matter by affecting gravity."
@@ -64,7 +64,7 @@
  origin_pd_floating_world_desc:0 "This civilization evolved on a world unlike any other in the galaxy. Thanks to the element Eludium, this planet's landmasses float effortlessly through the sky."
  origin_tooltip_floating_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_continental$§! (Size: £planetsize£ 20)$TABBED_NEW_LINE$- ['concept_pd_floating'] Planet Modifier$TABBED_NEW_LINE$- Two ['concept_d_pd_eludium_islands'] Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- ['concept_eludium_research', £physics_research£ $tech_eludium_research$]$TABBED_NEW_LINE$- ['concept_eludium_floating_islands', £physics_research£ $tech_eludium_floating_islands$]$TABBED_NEW_LINE$- ['concept_eludium_floating_resort', £physics_research£ $tech_eludium_floating_resort$] (Regular Empires)$TABBED_NEW_LINE$- ['concept_eludium_floating_overseer', £physics_research£ $tech_eludium_floating_overseer$] (Gestalt Empires)"
  concept_pd_floating: "$pd_floating$"
- concept_pd_floating_desc: "- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G10§!\n- $mod_planet_districts_upkeep_mult$: §R25%§!\n- $mod_planet_buildings_upkeep_mult$: §R25%§"
+ concept_pd_floating_desc: "- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G10§!\n- $mod_planet_districts_upkeep_mult$: §R25%§!\n- $mod_planet_buildings_upkeep_mult$: §R25%§!"
  concept_d_pd_eludium_islands: "$d_pd_eludium_islands$"
  concept_d_pd_eludium_islands_desc: "- $mod_district_mining_max$: §G4§!\n- $planet_miners_sr_eludium_produces_add$: §G0.25§!"
  planet_miners_sr_eludium_produces_add: "£sr_eludium£ $sr_eludium$ from £job_miner£ Miners"
